2003-02-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-config.el (mode-info-advise-describe-commands): Disable for
	emacsen with `define-button-type', such as Emacs-21.3.50.

	* elisp-comp.in (elisp-comp-target): Exclude `mi-fontify.el' from
	target files for Mule2.

2003-01-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.1.4.
	(mode-info-class-alist): Add make.

	* mi-make.el: New file.

	* mi-index.el (make-index-file): Only when the entry regular
	expression is defined, `process-node' method is called.
	(mode-info-process-index-node-1): Strict checking the type of
	`line'.

	* mi-emacs.el (process-node): Abolished.

	* mi-gauche.el (process-node): Abolished.

2002-09-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-util.el (mode-info-obarray, mode-info-method-obarray): Use 0
	instead of nil as the initial value for the new obarray.

2002-08-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.1.3.

	* mi-index.el (mode-info-make-index): Fix the bug that misses
	candidate titles.

2002-07-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.1.2.
	(mode-info-class-alist): Add guile and scheme.

	* mi-index.el (make-index-file): When Emacs is running without
	interactive terminal, do not load a generated index.
	(write-index-file): Call `save-buffer' instead of `write-region'
	in order to make a backup.

	* mi-scheme.el, mi-guile.el: New file.

	* mi-gauche.el: Reimplemented.

	* mi-fontify.el (mode-info-fontify-keywords): Relaxed.
	(retry-japanese-node-name): New advice.

2002-07-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-version): Release 0.1.1.
	(mode-info-class-alist): Add `gauche'.
	(mode-info-available-classes): New internal variable.
	(mode-info-read-class-name): Refer the above.

	* mi-index.el (mode-info-make-all-indices): Refer
	`mode-info-available-classes'.